--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # GUI Dependencies
 ttkbootstrap==1.10.1
-tk==0.1.0
+tkinter>=8.6.0  # Usually comes with Python installation
 
 # PDF Generation
 reportlab==4.0.7
@@ -13,3 +13,6 @@ pillow==10.1.0
 # pytest==7.4.3          # For testing
 # black==23.11.0         # For code formatting
 # pylint==3.0.2          # For code analysis
+
+# System Requirements
+# Windows/Linux/MacOS compatible
